fixed namespacing to resolve conflicts with the actual topcoat-select

--- a/css/topdoc-select.css
+++ b/css/topdoc-select.css
@@ -1,21 +1,4 @@
-/**
-*
-* Copyright 2012 Adobe Systems Inc.;
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-* http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*
-*/
-.topcoat-select {
+.topdoc-select {
   padding: 0;
   margin: 0;
   font: inherit;
@@ -24,12 +7,12 @@
   border: none;
 }
 
-.topcoat-select {
+.topdoc-select {
   vertical-align: top;
   outline: none;
 }
 
-.topcoat-select {
+.topdoc-select {
   cursor: default;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -37,30 +20,30 @@
   user-select: none;
 }
 
-.topcoat-select {
-  -moz-box-sizing: border-box;
+.topdoc-select {
   box-sizing: border-box;
   background-clip: padding-box;
 }
 
-.topcoat-select {
+.topdoc-select {
   position: relative;
   display: inline-block;
   vertical-align: top;
 }
 
-.topcoat-select:disabled {
-  opacity: 0.3;
+.topdoc-select:disabled {
+  opacity: .3;
   cursor: default;
   pointer-events: none;
 }
 
-.topcoat-select {
-  -moz-appearance: none;
+.topdoc-select {
   -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
-.topcoat-select::-ms-expand {
+.topdoc-select::-ms-expand {
   display: none;
 }
 
@@ -91,62 +74,62 @@
     - input
 */
 
-.topcoat-select {
+.topdoc-select {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
   cursor: pointer;
-  appearance: button;
-  text-indent: 0.01px;
+  text-indent: 1px;
   text-overflow: '';
-  padding: .06rem 1.4rem .06rem 0.4rem;
-  font-size: 12px;
+  padding: .25rem .75rem;
+  font-size: 1rem;
   font-weight: 400;
-  height: 1.313rem;
+  line-height: 1.313rem;
   letter-spacing: 0;
-  color: hsla(0, 0%, 27%, 1);
-  text-shadow: 0 1px hsla(0, 100%, 100%, 1);
+  color: hsla(180, 2%, 78%, 1);
+  text-shadow: 0 -1px hsla(0, 0%, 0%, .69);
+  vertical-align: top;
   border-radius: 4px;
-  background-color: hsla(165, 8%, 91%, 1);
-  box-shadow: inset 0 1px hsla(0, 100%, 100%, 1);
-  border: 1px solid hsla(168, 8%, 65%, 1);
+  background-color: hsla(180, 1%, 35%, 1);
+  box-shadow: inset 0 1px hsla(0, 0%, 45%, 1);
+  border: 1px solid hsla(180, 1%, 20%, 1);
   background-image: url('img/dropdown.svg');
   background-repeat: no-repeat;
   background-position: center right;
   min-width: 3.4rem;
 }
 
-.topcoat-select:hover {
-  background-color: hsla(180, 7%, 94%, 1);
+.topdoc-select:hover {
+  background-color: hsla(200, 2%, 39%, 1);
 }
 
-.topcoat-select:active {
-  background-color: hsla(180, 5%, 83%, 1);
-  box-shadow: inset 0 1px hsla(0, 0%, 0%, 0.1);
+.topdoc-select:active {
+  background-color: hsla(210, 2%, 25%, 1);
+  box-shadow: inset 0 1px hsla(0, 0%, 0%, .05);
 }
 
-.topcoat-select:focus {
+.topdoc-select:focus {
   border: 1px solid hsla(227, 100%, 50%, 1);
   box-shadow: 0 0 0 2px hsla(208, 82%, 69%, 1);
   outline: 0;
 }
-.dark .topcoat-select {
+.dark .topdoc-select {
   color: hsla(180, 2%, 78%, 1);
   text-shadow: 0 -1px hsla(0, 0%, 0%, 0.69);
   background-color: hsla(180, 1%, 35%, 1);
   box-shadow: inset 0 1px hsla(0, 0%, 45%, 1);
   border: 1px solid hsla(180, 1%, 20%, 1);
 }
-.dark .topcoat-select:hover {
+.dark .topdoc-select:hover {
   background-color: hsla(200, 2%, 39%, 1);
 }
-.dark .topcoat-select:active {
+.dark .topdoc-select:active {
   background-color: hsla(210, 2%, 25%, 1);
   box-shadow: inset 0 1px hsla(0, 0%, 0%, 0.05);
 }
 @media screen and (max-width: 650px) {
-  .topcoat-select {
+  .topdoc-select {
     color: hsla(180, 2%, 78%, 1);
     text-shadow: 0 -1px hsla(0, 0%, 0%, 0.69);
     background-color: hsla(180, 1%, 35%, 1);
@@ -158,14 +141,11 @@
     letter-spacing: 1px;
     border-radius: 6px;
   }
-  .topcoat-select:hover {
+  .topdoc-select:hover {
     background-color: hsla(200, 2%, 39%, 1);
   }
-  .topcoat-select:active {
+  .topdoc-select:active {
     background-color: hsla(210, 2%, 25%, 1);
     box-shadow: inset 0 1px hsla(0, 0%, 0%, 0.05);
   }
 }
-
-
-
